@@ -38,6 +38,7 @@ examples/fixture_create_and_print_snak_wd_givenname_douglas.pl
 examples/fixture_create_and_print_snak_wd_gramatical_gender_masculine.pl
 examples/fixture_create_and_print_snak_wd_image_dog.pl
 examples/fixture_create_and_print_snak_wd_instance_of_human.pl
+examples/fixture_create_and_print_snak_wd_instance_of_version_edition_or_translation.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
 examples/fixture_create_and_print_value_item_wd_douglas.pl
 examples/fixture_create_and_print_value_item_wd_douglasadams.pl
